Fix navigation spacing

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,29 +2,30 @@
     --flexbox: flex;
 }
 
+nav {
+    margin-top: 3vh;
+    margin-bottom: 2vh;
+}
+
 ul {
     display: var(--flexbox);
+    gap: 10px;
+    margin-right: 1vw;
 }
 
 li {
     border-radius: 12px;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 16px;
     list-style: none;
-    margin-right: 18px;
-    margin-top: 18px;
-    padding: 10px;
+    padding: 8px;
     text-align: center;
     transition: background-color 1s;
     width: 5vw;
 }
 
 li:nth-child(1) {
-    margin: 18px auto 0 3vw;
-}
-
-li:nth-child(3) {
-    width: 6vw;
+    margin: 0 auto 0 2vw;
 }
 
 li:hover {
