--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
 }
 
 aside {
+    margin: 3vh 0 0 2vw;
     position: fixed;
 }
 
